@@ -1,6 +1,12 @@
 # ChangeLog for dev-php/PEAR-Archive_Tar
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Archive_Tar/ChangeLog,v 1.65 2015/02/16 21:48:02 grknight Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Archive_Tar/ChangeLog,v 1.66 2015/03/23 00:34:46 grknight Exp $
+
+*PEAR-Archive_Tar-1.3.15 (23 Mar 2015)
+
+  23 Mar 2015; Brian Evans <grknight@gentoo.org>
+  +PEAR-Archive_Tar-1.3.15.ebuild:
+  Version bump
 
   16 Feb 2015; Brian Evans <grknight@gentoo.org> PEAR-Archive_Tar-1.3.13.ebuild:
   Add missing RDEPEND for bug 447180
